LOADUI-478 Fixed more tests... given more PermGen space so tests now should have the same amount of memory as deployed LoadUI